--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv-webpack": "^1.5.7",
     "lodash": "^3.10.1",
     "react": "16.3.2",
+    "react-content-loader": "^3.2.0",
     "react-dom": "16.3.2",
     "react-redux": "5.0.7",
     "redux": "4.0.0",
